Compatibilidade com aparelhos alem do usado no desenvolvimento
APIs acima do minSdk (compilavam, quebravam so em Android antigo)
O app declara minSdkVersion 21 e nao tem coreLibraryDesugaring, mas usava
quatro APIs muito mais novas. Nada disso gera aviso de compilacao: o
compilador olha o sourceCompatibility, nao o minSdk. O sintoma seria
NoSuchMethodError no aparelho do usuario.
- String.isBlank() (API 30) em Tools.shouldUseUBWC e em ModpackInstaller,
  trocado por trim().isEmpty()
- Set.of() (API 30) em TouchControllerUtils, trocado por HashSet
- String.join() (API 26) em ModpackInstaller, concatenado direto

Deteccao de GPU
- isAdreno() exigia vendor.equals("Qualcomm"), mas drivers reais reportam
  "Qualcomm Inc." e "Qualcomm Technologies, Inc.". Aparelhos Adreno legitimos
  eram tratados como GPU desconhecida e perdiam o driver Turnip e as
  mitigacoes especificas. Agora a comparacao e por substring, sem diferenciar
  maiusculas.
- glGetString pode devolver null: vendor e renderer agora sao normalizados na
  origem, e getMajorGLVersion trata null e strings sem ponto em vez de
  estourar NPE/StringIndexOutOfBounds antes da tela inicial aparecer.
- Novos helpers isMali, isPowerVR, isXclipse, isUnknown e getVendorFamily.

Selecao de renderizador
- MobileGlues era escolhido para qualquer versao 1.17+ sem checar a GPU. Ele
  traduz OpenGL desktop para GLES 3, entao em aparelho GLES 2 dava tela preta.
  Agora exige glesMajorVersion >= 3 e registra no log quando pula.
- getCompatibleRenderers filtra renderizadores que exigem GLES 3 em aparelhos
  GLES 2, e tambem os que nao tem biblioteca nativa empacotada (evita
  UnsatisfiedLinkError so na hora de jogar).
- A lista nunca fica vazia: quem chama faz rendererIds.get(0) direto, entao
  lista vazia era IndexOutOfBounds sem pista do motivo. Fallback para
  opengles2, que roda em qualquer aparelho suportado.

Crash com pasta mods ausente
- deleteSodiumMods tinha "if(mods == null) ;" -- o ponto e virgula esvaziava a
  guarda